[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI/pause_scene.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 normal/play_normal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 pressed/play_pressed.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 normal/reload_normal.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 pressed/reload_pressed.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 normal/home_normal.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 pressed/home_pressed.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Gui/Buttons/normal/music_normal.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Gui/Buttons/normal/sound_normal.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="pause_scene" type="CanvasLayer"]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 665.0
margin_bottom = 364.0
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="TouchScreenButton" parent="."]
position = Vector2( 416, 128 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="re-play" type="TouchScreenButton" parent="."]
position = Vector2( 273, 128 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )

[node name="home" type="TouchScreenButton" parent="."]
position = Vector2( 128, 128 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )

[node name="buttons" type="Node2D" parent="."]
position = Vector2( 544, 0 )

[node name="m_btn" type="Sprite" parent="buttons"]
position = Vector2( 25.7824, 22.8922 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="music_btn" type="TouchScreenButton" parent="buttons/m_btn"]
position = Vector2( -23.8391, -23.956 )
scale = Vector2( 2.31419, 2.40623 )
shape = SubResource( 1 )

[node name="s_btn" type="Sprite" parent="buttons"]
position = Vector2( 71.2022, 23.1358 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="sound_btn" type="TouchScreenButton" parent="buttons/s_btn"]
position = Vector2( -24.5687, -25.3136 )
scale = Vector2( 2.36405, 2.39524 )
shape = SubResource( 2 )
